--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
+
 * {
     color: white;
     font-family: 'Rajdhani', sans-serif;
-    -webkit-user-select: none; /* Safari */
-    -ms-user-select: none; /* IE 10+ */
+    -webkit-user-select: none; 
+    -ms-user-select: none; 
     user-select: none;
 }
 
@@ -32,21 +33,7 @@
 html, body {
     height: 100%;
     width: 100%;
-    margin: 0;
-    
-    /* background-color: #383838; */
-    /* animation: background-pan 10s ease-in-out infinite; */
-    /* background: linear-gradient(
-        to right,
-        rgb(123, 1, 180),
-        rgb(204, 0, 143),
-        rgb(123, 1, 180)
-    ); */
-    
-    /* background-position: left bottom right bottom; */
-    /* background-repeat: no-repeat; */
-    /* background-size: 300%; */
-    
+    margin: 0;    
     overflow: hidden;
 }
 body {
@@ -58,7 +45,7 @@ body {
 body::before {
     content: "";
     display: block;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
@@ -70,21 +57,8 @@ body::before {
 .row {
     width: 400px;
     height: 40px;
-    /* animation: background-pan 10s linear infinite;
-    background: linear-gradient(
-        to right,
-        rgb(63, 0, 92),
-        rgb(116, 0, 81),
-        rgb(63, 0, 92)
-    );
-    background-size: 200%;
-    overflow: hidden; */
-    /* background-color: black; */
     display: grid;
     grid-template-columns: repeat(10, 1fr);
-    /* display: flex; */
-    /* flex-direction: row; */
-    /* margin: auto; */
 }
 .column {
     
@@ -100,7 +74,6 @@ body::before {
     padding: 0 2px;
     background-color: rgba(0, 0, 0, .4);
     position: relative;
-    /* width: 606px; */
     width: fit-content;
     height: 100%;
     display: flex;
@@ -118,21 +91,17 @@ body::before {
 }
 
 #hold-piece, .next-piece{
-    /* background-color: #1F1F1F; */
     height: 100px;
     width: 100px;
     color: white;
 }
 #hold-text, #next-text, #score-text, #level-text, #time-text {
-    /* height: 50px; */
     text-align: center;
     font-size: 20px;
     font-weight: 700;
-    /* background-color: #1F1F1F; */
 }
 
 #hold-piece, .next-piece, #hold-text, #next-text, #roundInfo{
-    /* border: 1px solid transparent; */
     box-sizing: border-box;
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
@@ -140,14 +109,9 @@ body::before {
     border-radius: 6px;
     padding: 2px;
 }
-
-/* #hold-text, #next-text {
-    padding: 12px;
-} */
 #roundInfo {
     margin-bottom: 1px;
     margin-left: 1px;
-    /* flex-direction: column; */
 }
 #hold, #board{
     margin-right: 1px;
@@ -163,7 +127,6 @@ p {
     font-size: 15px;
 }
 button {
-    /* background-color: #1F1F1F; */
     font-size: 20px;
     width: 125px;
     height: 40px;
@@ -178,16 +141,10 @@ button:hover {
 button:active {
     color: #3f3f3f;
 }
-/* .next-piece, .hold-piece {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-} */
 #holdP, .nextP {
     width: 90%;
 }
 #block-help, #block-leaderboard {
-    /* display: none; */
     position: absolute;
     width: 24%;
     height: 80%;
@@ -197,22 +154,11 @@ button:active {
 
 #block-help {
     left: 5%;
-    
-    /* text-align: center; */
 }
 #help {
     height: 100%;
-    /* display: flex; */
     flex-direction: column;
-    /* justify-content: center;
-    align-items: center; */
-    /* font-weight: 500; */
 }
-/* #help > div{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-} */
 
 #block-leaderboard {
     right: 5%;
@@ -229,10 +175,7 @@ button:active {
     text-align: center;
 }
 .blockTitle {
-    /* margin: 20px; */
     font-size: 40px;
-    /* font-size: 250%; */
-    /* font-size: 2.5em; */
     font-weight: 700;
 }
 .help-titles {
@@ -246,21 +189,23 @@ button:active {
     align-items: center;
 }
 #leaderboard {
-    /* background-color: rgba(0, 0, 255, 0.3); */
     width: 90%;
     height: 80%;
     position: absolute;
     bottom: 50px;
-    overflow-y: scroll;  
+    overflow-y: scroll; 
+    background-color: rgba(0, 0, 0, .3); 
+    scrollbar-width: thin;
+    scrollbar-color: rgba(14, 14, 14, 1) rgba(0, 0, 0, .1);
 }
 
 table {
-    height: 100%;
+    /* height: 100%; */
     width: 100%;
-    background-color: rgba(0, 0, 0, .3);
+    /* scrollbar-width: 7px;
+    scrollbar-color: rgba(14, 14, 14, 0.6) black; */
     border-collapse: collapse;
     text-align: center;
-    /* display: inline-block; */
 }
 
 td, th {
@@ -273,13 +218,8 @@ th {
 }
 
 tr {
-    /* background-color: rgba(0, 0, 0, .3); */
     border-bottom: 1px solid #0e0e0e;
 }
-/* tr:nth-child(even) {
-    background-color: rgba(0, 0, 0, .3);
-} */
-
 
 #endScreen {
     position: absolute;
@@ -300,9 +240,6 @@ tr {
     flex-direction: column;
     height: 100%;
 }
-/* #finalScoreNumber, #finalScoreText, #playerName {
-    margin: 10px;
-} */
 #finalScoreNumber, #finalLevelNumber, #finalTimeNumber {
     font-size: 32px;
     margin-top: 0px;
@@ -315,13 +252,8 @@ tr {
     width: 350px;
     font-size: 25px;
     border: none;
-    /* outline: white; */
     border-radius: 6px;
 }
-/* #playerName:focus {
-    outline: none;
-    outline: black;
-} */
 #PlayerName:focus {
     outline: none !important;
     box-shadow: 0 0 7px #FFF;
@@ -348,9 +280,7 @@ tr {
 .finalTexts, .authors {
     font-size: 20px;
 }
-/* #end, #launch {
-    display: inherit;
-} */
+
 #madeBy {
     font-size: 30px;
 }
@@ -400,7 +330,6 @@ tr {
 
 ::-webkit-scrollbar-thumb {
     background-color: rgba(14, 14, 14, 0.6);
-    /* background-color: rgb(14, 14, 14); */
     border-radius: 100px;
 }
 
@@ -411,3 +340,124 @@ tr {
 ::-webkit-scrollbar-thumb:active {
     background-color: rgb(14, 14, 14);
 }
+
+#leaderboard-table tr:nth-child(2) {
+    border-bottom: 1px solid #ffd90050;
+    font-weight: bolder;
+}
+#leaderboard-table tr:nth-child(3) {
+    border-bottom: 1px solid #C0C0C050;
+    font-weight: bold;
+}
+#leaderboard-table tr:nth-child(4) {
+    border-bottom: 1px solid #CD7F3250;
+    font-weight: bold;
+}
+
+ @media only screen and (max-width: 1100px) {
+    html, body {
+        overflow: auto;
+    }
+    #block-help {
+        display: none;
+    }
+    #block-leaderboard {
+        /* display: none; */
+        width: 447px !important;
+        top: 100% !important;
+        left: 50%;
+        transform: translate(-50%, 0);
+    }
+ }
+ @media only screen and (max-width: 1400px) {
+    tr {
+        font-size: 10px !important;
+    }
+ }
+
+ @media only screen and (max-width: 1600px) {
+    .row {
+        width: 300px;
+        height: 30px;
+    }
+    #hold-piece, .next-piece {
+        width: 70px;
+        height: 70px;
+    }
+    #hold-text, #next-text {
+        width: 70px;
+        height: 40px;
+        font-size: 15px;
+    }
+    #roundInfo {
+        height: 40px;
+        width: 298px;
+    }
+    #level-text, #score-text, #time-text {
+        font-size: 15px;
+    }
+    .scorePoints {
+        font-size: 12px;
+    }
+    #PlayerName {
+        width: 275px;
+        height: 35px;
+        font-size: 20px;
+    }
+    #submit-button {
+        width: 100px;
+        height: 35px;
+        font-size: 17px;
+    }
+    .blockTitle {
+        font-size: 30px;
+    }
+    .finalDivs span:nth-child(2) {
+        font-size: 27px !important;
+    }
+    .finalDivs span:nth-child(1) {
+        font-size: 17px !important;
+    }
+    #startGame {
+        font-size: 20px;
+    }
+    .keycaps {
+        height: 50px;
+    }
+    .help-titles {
+        font-size: 16px;
+    }
+    #block-help, #block-leaderboard {
+        top: 8%;
+        height: 84%;
+        width: 28%;
+    }
+    #block-help {
+        left: 1%;
+    }
+    #block-leaderboard {
+        right: 1%;
+    }
+    tr {
+        font-size: 13px;
+    }
+    #madeBy {
+        font-size: 25px;
+    }
+    .authors {
+        font-size: 17px;
+    }
+    #levelUp {
+        font-size: 20px;
+        width: 70px;
+    }
+    #whyThisScore {
+        font-size: 12px;
+    }
+ }
+ @media only screen and (max-width: 1870px) {
+    tr {
+        font-size: 13px;
+    }
+ }
+ 
